2001-02-07  Robin * Slomkowski  <rslomkow@eazel.com>

	* README: updated to note using the gnome-vfs-1 branch

2001-02-07  Andy Hertzfeld  <andy@eazel.com>

	fixed bug 6281, property browser should user gnome icon
	selection UI for adding patterns and emblems instead of
	generic file browsing
	
	* libnautilus-extensions/nautilus-gnome-extensions.c,h:
	(nautilus_gnome_open_terminal), (widget_destroy_callback),
	(icon_selected_callback), (icon_cancel_pressed),
	(list_icon_selected_callback), (entry_activated),
	(nautilus_gnome_icon_selector_new):
	moved code to integrate icon picking UI from the properties
	window into gnome-extensions, so other parts of nautilus can
	use it.
	
	* src/file-manager/fm-properties-window.c: (set_icon_callback),
	(select_image_button_callback):
	moved icon picking code out of properties window, but call it
	from here instead.
	
	* src/nautilus-property-browser.c: (nautilus_emblem_dialog_new),
	(add_pattern_to_browser), (add_new_pattern),
	(emblem_dialog_clicked):
	use icon picking code in property browser to pick patterns, and
	rework the emblem dialog to use gnome-icon-entry.
	
2001-02-07  Gene Z. Ragan  <gzr@eazel.com>

	reviewed by: Robin Slomkowski <robin@eazel.com>
	
	Fixed bug 6389, Extremely poor performance when
	autodir automounter is present
	
	Detect special NFS autofs directories and filter them out
	of the mount list.
	
	* libnautilus-extensions/nautilus-volume-monitor.c:
	(get_removable_volumes), (mount_volume_activate_nfs),
	(mount_volume_activate), (get_current_mount_list),
	(mount_volume_nfs_add), (mount_volume_add_filesystem):

	Worked on cleaning up placement of icons on the edges
	of the desktop based on input from Arlo.
	
	* libnautilus-extensions/nautilus-icon-container.c:
	(icon_set_position):
		
2001-02-07  Gene Z. Ragan  <gzr@eazel.com>

	Fixed bug 6363, "Set Cover Image" button assumes
	fixed font height.
	
	* components/music/nautilus-music-view.c:
	(nautilus_music_view_initialize):