@@ -1,3 +1,14 @@
+2001-02-07  Gene Z. Ragan  <gzr@eazel.com>
+
+	Fixed bug 5967, Music View slider is narrow in Eazel GTK theme
+	
+	Attempt to layout using Arlo's design.
+	
+	* components/music/nautilus-music-view.c:
+	(music_view_set_selected_song_title), (add_play_controls),
+	(nautilus_music_view_update),
+	(music_view_background_appearance_changed_callback):
+
 2001-02-07  Robin * Slomkowski  <rslomkow@eazel.com>
 
 	* README: updated to note using the gnome-vfs-1 branch
